# entsoe-data-toolkit

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: run_generation.py
src/entsoe_toolkit/: client.py  config.py  download.py  io.py  plot.py  process.py
